--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 16px;
+}
+
+html {
+    font-family: "Quicksand", "sans-serif";
+}
+
+body {
+    background-color: #04080F;
+}
