--- a/frontend/src/app/components/partials/category-section/category-section.component.html
+++ b/frontend/src/app/components/partials/category-section/category-section.component.html
@@ -1,8 +1,10 @@
-<div class="container">
-    <div *ngFor="let category of categories"
-        [style.background]="'url(' + category.imageUrl + ') no-repeat 50% / cover'">
-        <div class="content">
-            <h2>{{ category.name }}</h2>
+<body>
+    <div class="container">
+        <div *ngFor="let category of categories"
+            [style.background]="'url(' + category.imageUrl + ') no-repeat 50% / cover'">
+            <div class="content">
+                <h2>{{ category.name }}</h2>
+            </div>
         </div>
     </div>
-</div>
+</body>
