--- a/frontend/src/app/components/partials/products-grid/products-grid.component.css
+++ b/frontend/src/app/components/partials/products-grid/products-grid.component.css
@@ -1,174 +1,139 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
-
-* {
-    margin-top: 20px;
-    padding: 0;
-    box-sizing: border-box;
+.center {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    height: 700px;
 }
 
-body {
-    min-height: 100vh;
+
+.grid {
     display: grid;
-    place-items: center;
-    background: #100721;
-    font-family: "Ubuntu Mono", monospace;
-    font-weight: 400;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    /* Spazio tra le colonne */
+    justify-content: center;
 }
 
-a,
-a:hover {
-    text-decoration: none;
-    color: inherit;
-}
-
-.section-products {
-    padding: 80px 0 54px;
-}
-
-.section-products .header {
-    margin-bottom: 50px;
-}
-
-.section-products .header h3 {
-    font-size: 1rem;
-    color: #fe302f;
-    font-weight: 500;
-}
-
-.section-products .header h2 {
-    font-size: 2.2rem;
-    font-weight: 400;
-    color: #444444;
-}
-
-.section-products .single-product {
-    margin-bottom: 26px;
-}
-
-.section-products .single-product .part-1 {
+.card {
     position: relative;
-    height: 290px;
-    max-height: 290px;
-    margin-bottom: 20px;
-    overflow: hidden;
-}
-
-.section-products .single-product .part-1::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    z-index: -1;
-    transition: all 0.3s;
-}
-
-.section-products .single-product:hover .part-1::before {
-    transform: scale(1.2, 1.2) rotate(5deg);
-}
-
-.section-products .single-product .part-2 {
-    position: relative;
-    height: 290px;
-    max-height: 290px;
-    margin-bottom: 20px;
+    /* Riempie l'intera larghezza della cella della griglia */
+    height: 7.5em;
+    transition: .4s ease-in-out;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     overflow: hidden;
-}
-
-.section-products .single-product .part-2::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+    margin: 20px;
+    /* Margine simmetrico tutto intorno */
     background-size: cover;
-    transition: all 0.3s;
+    background-position: center;
 }
 
-.section-products .single-product:hover .part-2::before {
-    transform: scale(1.2, 1.2) rotate(5deg);
-}
 
-.section-products .single-product .part-1 .discount,
-.section-products .single-product .part-1 .new {
-    position: absolute;
-    top: 15px;
-    left: 20px;
-    color: #ffffff;
-    background-color: #fe302f;
-    padding: 2px 8px;
-    text-transform: uppercase;
-    font-size: 0.85rem;
-}
-
-.section-products .single-product .part-1 .new {
-    left: 0;
-    background-color: #444444;
-}
-
-.section-products .single-product .part-1 ul {
-    position: absolute;
-    bottom: -41px;
-    left: 20px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    opacity: 0;
-    transition: bottom 0.5s, opacity 0.5s;
-}
-
-.section-products .single-product:hover .part-1 ul {
-    bottom: 30px;
-    opacity: 1;
-}
-
-.section-products .single-product .part-1 ul li {
-    display: inline-block;
-    margin-right: 4px;
-}
-
-.section-products .single-product .part-1 ul li a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    background-color: #ffffff;
-    color: #444444;
-    text-align: center;
-    box-shadow: 0 2px 20px rgba(50, 50, 50, 0.10);
-    transition: color 0.2s;
-}
-
-.section-products .single-product .part-1 ul li a:hover {
-    color: #fe302f;
-}
-
-.section-products .single-product .part-2 .product-title {
-    font-size: 1rem;
-}
-
-.section-products .single-product .part-2 h4 {
-    display: inline-block;
-    font-size: 1rem;
-}
-
-.section-products .single-product .part-2 .product-old-price {
+.heading {
     position: relative;
-    padding: 0 7px;
-    margin-right: 2px;
-    opacity: 0.6;
+    color: black;
+    font-weight: bold;
+    font-size: 1.1em;
+    padding-top: 1em;
+    padding-left: 1em;
+    transition: .4s ease-in-out;
 }
 
-.section-products .single-product .part-2 .product-old-price::after {
-    position: absolute;
-    content: "";
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: #444444;
-    transform: translateY(-50%);
+.details {
+    position: relative;
+    color: black;
+    font-size: 0.6em;
+    padding-top: 1.5em;
+    padding-left: 2em;
+    transition: .4s ease-in-out;
+}
+
+.price {
+    position: relative;
+    color: black;
+    font-weight: bold;
+    font-size: 0.8em;
+    padding-top: 1.5em;
+    padding-left: 1.5em;
+    top: 9.6em;
+    left: 5em;
+    transition: .4s ease-in-out;
+}
+
+.btn1 {
+    position: relative;
+    border: none;
+    outline: none;
+    background-color: rgb(37, 37, 37);
+    color: white;
+    font-size: 0.6em;
+    padding-left: 6.9em;
+    padding-right: 6.9em;
+    padding-top: 0.8em;
+    padding-bottom: 0.85em;
+    border-radius: 10px;
+    left: 2.6em;
+    top: 14.8em;
+    transition: .4s ease-in-out;
+    font-weight: bold;
+}
+
+.btn1:hover {
+    background-color: rgb(63, 73, 216);
+    cursor: pointer;
+}
+
+.btn2 {
+    position: relative;
+    border: none;
+    outline: none;
+    background-color: rgb(37, 37, 37);
+    color: white;
+    font-size: 0.6em;
+    padding-left: 5.1em;
+    padding-right: 5.1em;
+    padding-top: 0.8em;
+    padding-bottom: 0.85em;
+    border-radius: 10px;
+    left: 2.6em;
+    top: 15.5em;
+    transition: .4s ease-in-out;
+    font-weight: bold;
+}
+
+.btn2:hover {
+    background-color: rgb(63, 73, 216);
+    cursor: pointer;
+}
+
+.glasses {
+    position: relative;
+    top: -4em;
+    left: 9.5em;
+    width: 70px;
+    height: 70px;
+    transition: .4s ease-in-out;
+}
+
+.card:hover {
+    width: 12.5em;
+    height: 23em;
+    transform: translateY(1.25em);
+}
+
+.card:hover+.glasses {
+    transform: rotateX(360deg);
+    height: 100px;
+    width: 100px;
+    left: 3em;
+    top: -18em;
+}
+
+.card:hover .heading {
+    transform: translateY(7em) translateX(2.3em);
+}
+
+.card:hover .details {
+    transform: translateY(13em) translateX(3.5em);
 }
