--- a/frontend/src/app/components/partials/category-section/category-section.component.html
+++ b/frontend/src/app/components/partials/category-section/category-section.component.html
@@ -1,4 +1,4 @@
-<section class="center">
+<section class="center" id="category">
     <div class="container">
         <div *ngFor="let category of categories"
             [style.background]="'url(' + category.imageUrl + ') no-repeat 50% / cover'">
