--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,10 +4,10 @@
     <div class='bx bx-menu' id="menu-icon"></div>
 
     <nav class="navbar">
-        <a href="#home" class="active">Home</a>
+        <a routerLink="/home" class="active">Home</a>
         <a href="#category">Category</a>
         <a href="#products">Products</a>
-        <a href="#skills">Cart
+        <a routerLink="/cart">Cart
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path
                     d="M21.822 7.431A1 1 0 0 0 21 7H7.333L6.179 4.23A1.994 1.994 0 0 0 4.333 3H2v2h2.333l4.744 11.385A1 1 0 0 0 10 17h8c.417 0 .79-.259.937-.648l3-8a1 1 0 0 0-.115-.921zM17.307 15h-6.64l-2.5-6h11.39l-2.25 6z">
