--- a/frontend/src/app/components/partials/products-grid/products-grid.component.css
+++ b/frontend/src/app/components/partials/products-grid/products-grid.component.css
@@ -20,7 +20,7 @@ section {
 
 .card {
     margin-bottom: 10px;
-    max-width: 12em;
+    width: 12em;
     background-color: #fff;
     padding: 1em;
     border-radius: 10px;
