--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,9 +4,9 @@
     <div class='bx bx-menu' id="menu-icon"></div>
 
     <nav class="navbar">
-        <a routerLink="/home" class="active">Home</a>
+        <a routerLink="/" class="active">Home</a>
         <a href="#category">Category</a>
-        <a href="#products">Products</a>
+        <a routerLink="/products">Products</a>
         <a routerLink="/cart">Cart
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path
