--- a/frontend/src/app/components/pages/products/products.component.html
+++ b/frontend/src/app/components/pages/products/products.component.html
@@ -1,1 +1,7 @@
-<app-products-grid></app-products-grid>
+<section id="products">
+    <div class="center">
+        <div class="grid">
+            <app-product-card *ngFor="let product of products" [product]="product"></app-product-card>
+        </div>
+    </div>
+</section>
