--- a/frontend/src/app/components/partials/products-grid/products-grid.component.css
+++ b/frontend/src/app/components/partials/products-grid/products-grid.component.css
@@ -1,13 +1,11 @@
 section {
-    min-height: 100vh;
+    min-height: 90vh;
     padding: 10rem 9% 2rem;
-    background: #507dbc;
 }
 
 .center {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
 }
 
 
@@ -27,6 +25,7 @@ section {
     box-shadow: #507dbc;
     font-family: Arial, Helvetica, sans-serif;
     transition: .3s;
+    box-shadow: 1px 3px 15px #507dbc;
 }
 
 .card img {
