--- a/frontend/src/app/components/partials/products-grid/products-grid.component.html
+++ b/frontend/src/app/components/partials/products-grid/products-grid.component.html
@@ -1,24 +1,11 @@
 <section id="products">
     <div class="center">
+        <div class="text">
+            <h2>Last product:</h2>
+            <h4 routerLink="/products">More product</h4>
+        </div>
         <div class="grid">
-
             <app-product-card *ngFor="let product of products" [product]="product"></app-product-card>
-
-            <div class="card">
-                <h4>More Products</h4>
-                <div class="price">
-                    <span>...</span>
-                </div>
-                <div>
-                    <button class="btn-1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path
-                                d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z">
-                            </path>
-                        </svg>
-                    </button>
-                </div>
-            </div>
         </div>
     </div>
 </section>
