--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
-
 * {
     box-sizing: border-box;
 }
@@ -9,10 +6,11 @@ html {
     font-size: 16px;
 }
 
-html {
-    font-family: "Quicksand", "sans-serif";
-}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 body {
-    background-color: #04080F;
+    font-family: 'Poppins', sans-serif;
+    background-color: #f7f7f7;
 }
