--- a/frontend/src/app/components/partials/product-card/product-card.component.html
+++ b/frontend/src/app/components/partials/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <span routerLink="/product/{{product._id}}">
-        <img src="{{product.images}}" alt="{{product.title}}">
+        <img src="{{product.images[0]}}" alt="{{product.title}}">
         <h4>{{product.title}}</h4>
         <div class="price">
             <span>€{{product.price}}</span>
