--- a/frontend/src/app/components/partials/category-section/category-section.component.html
+++ b/frontend/src/app/components/partials/category-section/category-section.component.html
@@ -1,7 +1,8 @@
 <section class="center" id="category">
     <div class="container">
         <div *ngFor="let category of categories"
-            [style.background]="'url(' + category.imageUrl + ') no-repeat 50% / cover'">
+            [style.background]="'url(' + category.imageUrl + ') no-repeat 50% / cover'"
+            (click)="navigateToCategory(category._id)">
             <div class="content">
                 <h2>{{ category.name }}</h2>
             </div>
