Added Order Model, checkout-page, Register Form

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -1,4 +1,4 @@
-<app-login-modal [isOpen]="isLoginModalOpen" (closeModal)="closeLoginModal()"></app-login-modal>
+<app-form-modal [isOpen]="isLoginModalOpen" (closeModal)="closeLoginModal()"></app-form-modal>
 <header class="header">
     <a href="#" class="logo">HeroMusic.</a>
     <nav class="navbar">
