--- a/frontend/src/app/components/partials/order-items-list/order-items-list.component.html
+++ b/frontend/src/app/components/partials/order-items-list/order-items-list.component.html
@@ -6,7 +6,7 @@
     </tr>
     <tr *ngFor="let item of order.items">
         <td>
-            <a routerLink="/food/{{item.product._id}}">
+            <a routerLink="/product/{{item.product._id}}">
                 <img [src]="item.product.images[0]">
             </a>
         </td>
